implementing linear model

--- a/notebooks/linear_model_nn_from_scratch.ipynb
+++ b/notebooks/linear_model_nn_from_scratch.ipynb
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "c1506c3d-f425-43b7-a97e-f016642316d5",
    "metadata": {},
    "outputs": [
@@ -950,7 +950,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "aa861cfa-6d31-48af-affd-582fe9cb25b3",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,12 +996,12 @@
    "id": "f3d9b0f7-c2aa-4467-904b-bae8f732f422",
    "metadata": {},
    "source": [
-    "We'll also add a separate column for each of them with a boolean indicating whether the original value was null. This may be useful in the case where a null value is a useful predictor:"
+    "We'll also add a separate column for each of them with a boolean indicating whether the original value was null. This may be useful in the case where a null value is a useful predictor. The new columns will have data like below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "d5b24391-e6f5-42ad-b43a-e08711e51621",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,7 @@
        "Name: BQ, Length: 617, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "15dcebd1-6cf8-4172-b3ce-dec4c40ad852",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        "freq               1  395"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,12 +1119,12 @@
    "source": [
     "Since we'll be doing multiplication by parameters of the model, we need all inputs as numeric values. We typically expand these to additional columns for each unique value in the category, and each row will have a boolean value indicating which category it belongs to.\n",
     "\n",
-    "`Id` has too many values to be broken out into multiple categories, so we'll exclude it. We can get categories for the EJ column as with pandas method `get_dummies` as below:"
+    "`Id` has too many values to be broken out into multiple categories and should be unique per observation, so we'll exclude it. We can get categories for the EJ column as with pandas method `get_dummies` as below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "305114a0-50ad-4b8e-826d-fa2214349eed",
    "metadata": {},
    "outputs": [
@@ -1139,7 +1139,7 @@
        "Name: EJ, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "a4989be6-8885-4c6c-9c71-afe3ee429a1f",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "4  False   True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,12 +1235,12 @@
    "source": [
     "`get_dummies` will replace the original `EJ` column with two columns for each possible value. The boolean values can them be converted to integers.\n",
     "\n",
-    "However, since there are only two possible values for EJ, we can simply retain the use of one column and use a boolean integer to distinguish between the two category levels like below:"
+    "However, since there are only two possible values for EJ, we can retain one column and use a boolean integer to distinguish between the two category levels like below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "862ff46c-1cde-44f5-a07d-daf899e73082",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1250,7 @@
        "array([1, 0, 1, 1, 1, 0, 1, 1, 1, 0], dtype=int8)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "id": "a4d78fa8-4ffa-4406-bf75-270d5eab4ac6",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1279,7 @@
        "<Axes: xlabel='FR', ylabel='Density'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "2883c558-75e4-4277-8b4f-e7c9ff567a05",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
        "(0.49706, 3.533905218800648, 1244.22702)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "709071d5-50bd-4f01-ae66-71db3b9a9625",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1339,7 @@
        "<Axes: xlabel='FR', ylabel='Density'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "c67fe53f-204d-4119-a0f6-fd89a4156d96",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
        "(-0.6990445358260293, 0.06233208049973395, 7.126269748610907)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "id": "0b87b861-7277-4f6d-ab87-034f9bd811c2",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1584,7 @@
        "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 21,
    "id": "6d20a461-b8bc-4b66-ab47-7c23568467e0",
    "metadata": {},
    "outputs": [],
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "id": "d45fcdb9-cdd0-418c-a711-d4525e9610eb",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1645,7 @@
        "torch.Size([617])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 23,
    "id": "5a415ff1-468a-4749-9681-5ac677fb0808",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
        "torch.Size([617, 56])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 24,
    "id": "4fa84ede-3e6d-434c-a3a2-6252ccc9d560",
    "metadata": {},
    "outputs": [
@@ -1755,12 +1755,196 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5945d897-8d71-431f-aaa3-83d7db7f21d0",
+   "metadata": {},
+   "source": [
+    "We'll start with simple linear model, for which we need coefficients for each input feature and a bias as our parameters. We initialize the parameters as random numbers centered around 0:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "56f8364f-6d29-4901-9f54-4bbedece521b",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.3823,  0.4150, -0.1171,  0.4593, -0.1096,  0.1009, -0.2434,  0.2936,\n",
+       "          0.4408, -0.3668,  0.4346,  0.0936,  0.3694,  0.0677,  0.2411, -0.0706,\n",
+       "          0.3854,  0.0739, -0.2334,  0.1274, -0.2304, -0.0586, -0.2031,  0.3317,\n",
+       "         -0.3947, -0.2305, -0.1412, -0.3006,  0.0472, -0.4938,  0.4516, -0.4247,\n",
+       "          0.3860,  0.0832, -0.1624,  0.3090,  0.0779,  0.4040,  0.0547, -0.1577,\n",
+       "          0.1343, -0.1356,  0.2104,  0.4464,  0.2890, -0.2186,  0.2886,  0.0895,\n",
+       "          0.2539, -0.3048, -0.4950, -0.1932, -0.3835,  0.4103,  0.1440,  0.2071]),\n",
+       " tensor([0.1581]))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "n_coeff = X.shape[1]\n",
+    "\n",
+    "coeffs = torch.rand(n_coeff) - 0.5\n",
+    "bias = torch.rand(1) - 0.5\n",
+    "coeffs, bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "203e77d7-1147-4009-acec-549e4f7dd213",
+   "metadata": {},
+   "source": [
+    "We'd get our initial predictions from the linear model as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5343ad87-aa22-4dff-bb6e-c663ae0520e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([617])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds = (X * coeffs).sum(dim=1) + bias\n",
+    "preds.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95ed6746-6972-46cf-9de6-3332aa576fe7",
+   "metadata": {},
+   "source": [
+    "However, the columns with relatively larger values are likely to dominate the results. Getting the average column values, we can see that there's quite a variation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3cccb9e1-6a4e-4e2a-926a-eed96e2facab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.3612, 7.9640, 4.6529, 3.2092, 2.3232, 1.8221, 0.0456, 2.3701, 1.3394,\n",
+       "        8.5203, 3.0967, 5.3208, 4.2660, 6.3931, 5.8539, 3.8312, 0.5143, 4.4070,\n",
+       "        2.2376, 0.0301, 0.8093, 0.5437, 3.5791, 0.8437, 3.1281, 3.8712, 5.7427,\n",
+       "        0.3634, 0.3093, 4.8944, 4.5125, 3.2673, 0.5106, 1.0411, 3.0968, 2.2275,\n",
+       "        1.2954, 7.2820, 0.1663, 4.1095, 4.5880, 3.0390, 3.7811, 1.1472, 8.9723,\n",
+       "        2.3728, 1.2481, 0.7731, 0.2892, 2.9911, 4.6552, 8.8071, 3.4352, 3.6830,\n",
+       "        1.3632, 0.6402])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.sum(axis=0) / X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4dd9224-ac46-47c7-93b4-af5a0bd289e0",
+   "metadata": {},
+   "source": [
+    "We can scale all columns to values between 0 and 1 by dividing each column with it's maximum value. The average column values then have much less variation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fd4d8cea-7e42-41ee-b0f9-1bd6620e0b13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.1835, 0.7759, 0.6158, 0.4977, 0.4474, 0.4964, 0.0188, 0.6426, 0.1837,\n",
+       "        0.7832, 0.9077, 0.6819, 0.7298, 0.5285, 0.5409, 0.4957, 0.3155, 0.6829,\n",
+       "        0.4215, 0.1487, 0.2321, 0.3894, 0.6398, 0.4730, 0.7479, 0.7231, 0.7505,\n",
+       "        0.0993, 0.4279, 0.7036, 0.7793, 0.7862, 0.1003, 0.3188, 0.6153, 0.4881,\n",
+       "        0.4374, 0.7058, 0.0441, 0.8741, 0.6582, 0.3461, 0.4716, 0.1558, 0.7557,\n",
+       "        0.6579, 0.2530, 0.1085, 0.0832, 0.6081, 0.6366, 0.7416, 0.7791, 0.7004,\n",
+       "        0.4349, 0.6402])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_vals, _ = X.max(axis=0)\n",
+    "(X / max_vals).sum(0) / X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebef35cc-ac2f-4fc4-b533-6ab6c30e5ba5",
+   "metadata": {},
+   "source": [
+    "We therefore scale down our X values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bb8f1aa3-b483-4a05-b077-74751c5ca91e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = X / max_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8d069ac5-e18c-41e4-b44d-b6fc2fd016fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0966, 0.7835, 0.5899,  ..., 0.8102, 0.0363, 1.0000],\n",
+       "        [0.0689, 0.6710, 0.5899,  ..., 0.6657, 1.0000, 0.0000],\n",
+       "        [0.1957, 0.7674, 0.5899,  ..., 0.6825, 0.0574, 1.0000],\n",
+       "        ...,\n",
+       "        [0.1807, 0.7607, 0.6454,  ..., 0.9113, 1.0000, 0.0000],\n",
+       "        [0.1574, 0.6959, 0.5899,  ..., 0.6925, 0.0541, 1.0000],\n",
+       "        [0.2001, 0.7688, 0.8346,  ..., 0.9037, 1.0000, 0.0000]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1769,6 +1953,14 @@
    "source": [
     "# Inference"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15787aa-5bec-4365-888b-9e133ff08193",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
