add gradient descent

--- a/notebooks/linear_model_nn_from_scratch.ipynb
+++ b/notebooks/linear_model_nn_from_scratch.ipynb
@@ -15,7 +15,23 @@
    "execution_count": 1,
    "id": "0631aea0-117f-4cf8-9477-17705f65b0d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "is_kaggle = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', '')\n",
@@ -887,7 +903,7 @@
    "id": "b89c2ad7-e397-47dc-8974-b72819886526",
    "metadata": {},
    "source": [
-    "The mean value of Class much closer to zero, which means that we have an more -ve observations than positive"
+    "The mean value of Class much closer to zero, which means that we have more observations classified as negative than positive."
    ]
   },
   {
@@ -1117,7 +1133,7 @@
    "id": "d84df174-6cdf-4af8-993e-766251fbad57",
    "metadata": {},
    "source": [
-    "Since we'll be doing multiplication by parameters of the model, we need all inputs as numeric values. We typically expand these to additional columns for each unique value in the category, and each row will have a boolean value indicating which category it belongs to.\n",
+    "Since we'll be doing multiplication by parameters of the model, we need all inputs as numeric values. We typically treat non-numeric types as categorical variables, replacing them with additional columns for each unique value in the category. Each row will have a boolean value indicating which category it's value belongs to.\n",
     "\n",
     "`Id` has too many values to be broken out into multiple categories and should be unique per observation, so we'll exclude it. We can get categories for the EJ column as with pandas method `get_dummies` as below:"
    ]
@@ -1233,9 +1249,9 @@
    "id": "b96d9cf7-d26b-4bad-bdb7-14b2a6264a42",
    "metadata": {},
    "source": [
-    "`get_dummies` will replace the original `EJ` column with two columns for each possible value. The boolean values can them be converted to integers.\n",
+    "`get_dummies` will replace the original `EJ` column with two columns for each possible value. The boolean values can then be converted to integers.\n",
     "\n",
-    "However, since there are only two possible values for EJ, we can retain one column and use a boolean integer to distinguish between the two category levels like below:"
+    "However, since there are only two possible values for EJ, a second column will be a duplicate of the same information since they're mutually exclusive. We'll retain it as one column and use a boolean integer to distinguish between the two categories like below:"
    ]
   },
   {
@@ -1324,7 +1340,7 @@
    "id": "1f69e013-9ce9-4304-8225-16fe9bbf20aa",
    "metadata": {},
    "source": [
-    "This will result in only a few rows with large values dominating the results. To help with this, we can replace their values with the log, resulting in a smaller range."
+    "This will result in only a few rows with large values dominating the results. To avoid this, we replace their values with the log, resulting in a smaller range."
    ]
   },
   {
@@ -1686,7 +1702,7 @@
    "id": "c5560fae-0eeb-4b95-9b40-7eed0cdbad6b",
    "metadata": {},
    "source": [
-    "We can print the first 3 inputs and predictions as below:"
+    "We can print the first 3 input rows and predictions as below:"
    ]
   },
   {
@@ -1699,7 +1715,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1, 0, 0])\n",
       "tensor([[1.9011e-01, 8.0424e+00, 4.4567e+00, 3.1525e+00, 2.2125e+00, 5.3055e-01,\n",
       "         2.5256e-02, 2.3807e+00, 1.8803e+00, 8.3254e+00, 3.1612e+00, 5.1741e+00,\n",
       "         5.0351e+00, 6.7153e+00, 5.5546e+00, 3.8758e+00, 4.4691e-01, 3.1941e+00,\n",
@@ -1729,13 +1744,14 @@
       "         2.2134e+00, 7.3099e+00, 3.2006e-01, 4.7016e+00, 4.3761e+00, 1.8548e+00,\n",
       "         5.4170e+00, 2.2768e+00, 9.0288e+00, 2.5358e+00, 2.1644e+00, 6.8085e-01,\n",
       "         7.8792e-01, 3.6396e+00, 4.4955e+00, 9.5235e+00, 3.3681e+00, 3.5889e+00,\n",
-      "         1.7977e-01, 1.0000e+00]])\n"
+      "         1.7977e-01, 1.0000e+00]])\n",
+      "tensor([1, 0, 0])\n"
      ]
     }
    ],
    "source": [
-    "print(y[:3])\n",
-    "print(X[:3])"
+    "print(X[:3])\n",
+    "print(y[:3])"
    ]
   },
   {
@@ -1766,12 +1782,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "56f8364f-6d29-4901-9f54-4bbedece521b",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1920,6 +1931,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a865f604-8ca3-471a-9b14-24497996e36b",
+   "metadata": {},
+   "source": [
+    "This is how we can get our initial set of predictions:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "8d069ac5-e18c-41e4-b44d-b6fc2fd016fa",
@@ -1928,13 +1947,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0.0966, 0.7835, 0.5899,  ..., 0.8102, 0.0363, 1.0000],\n",
-       "        [0.0689, 0.6710, 0.5899,  ..., 0.6657, 1.0000, 0.0000],\n",
-       "        [0.1957, 0.7674, 0.5899,  ..., 0.6825, 0.0574, 1.0000],\n",
-       "        ...,\n",
-       "        [0.1807, 0.7607, 0.6454,  ..., 0.9113, 1.0000, 0.0000],\n",
-       "        [0.1574, 0.6959, 0.5899,  ..., 0.6925, 0.0541, 1.0000],\n",
-       "        [0.2001, 0.7688, 0.8346,  ..., 0.9037, 1.0000, 0.0000]])"
+       "tensor([1.3688, 0.3260, 1.1451, 1.1732, 0.9525, 0.4920, 1.0112, 0.7388, 0.9440,\n",
+       "        0.6490])"
       ]
      },
      "execution_count": 30,
@@ -1943,7 +1957,321 @@
     }
    ],
    "source": [
-    "X"
+    "preds = (X * coeffs).sum(axis=1) + bias\n",
+    "preds[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd7732ab-8109-4bdf-9428-71143cf79f29",
+   "metadata": {},
+   "source": [
+    "For the linear model to learn, it needs to evaluate its predictions at each step to see how far it is from the true predictions, and modify its parameters to give better predictions.\n",
+    "\n",
+    "One simple way to do this is to get the mean error across all the predictions by calculating the mean absolute error like below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8e2e840a-ce7c-4022-91da-9237aa6afb78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.7565)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.abs(preds-y).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "538c1f80-c76a-4970-911a-c95dd171b86b",
+   "metadata": {},
+   "source": [
+    "The mean absolute error will therefore be the loss function that will be used improve predictions.\n",
+    "\n",
+    "We add functions to calculate predictions and the loss as shown above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4441159f-43c3-4f51-98ee-0216e0bf77c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_preds(coeffs, bias, X): return (X * coeffs).sum(axis=1) + bias\n",
+    "def calculate_loss(coeffs, bias, X, y): return torch.abs(calculate_preds(coeffs, bias, X) - y).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c8a93235-b838-4819-be6e-0d5cfcd9ce29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.7565)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_loss(coeffs, bias, X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36f44634-a7fd-421e-8b1c-4a22c5952594",
+   "metadata": {},
+   "source": [
+    "It gives us the same MAE as seen previously.\n",
+    "\n",
+    "Now that we have a means of getting predictions and evaluating them via the loss function, we now need a way of using the loss to alter the parameters (coefficients + bias) to improve the next set of predictions. We do this by getting the gradient of each parameter after calculating the loss. We need to intialize the parameters in a special way to achieve this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "390deddd-45a5-4d81-a1f2-def33999fca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.3823,  0.4150, -0.1171,  0.4593, -0.1096,  0.1009, -0.2434,  0.2936,\n",
+       "          0.4408, -0.3668,  0.4346,  0.0936,  0.3694,  0.0677,  0.2411, -0.0706,\n",
+       "          0.3854,  0.0739, -0.2334,  0.1274, -0.2304, -0.0586, -0.2031,  0.3317,\n",
+       "         -0.3947, -0.2305, -0.1412, -0.3006,  0.0472, -0.4938,  0.4516, -0.4247,\n",
+       "          0.3860,  0.0832, -0.1624,  0.3090,  0.0779,  0.4040,  0.0547, -0.1577,\n",
+       "          0.1343, -0.1356,  0.2104,  0.4464,  0.2890, -0.2186,  0.2886,  0.0895,\n",
+       "          0.2539, -0.3048, -0.4950, -0.1932, -0.3835,  0.4103,  0.1440,  0.2071],\n",
+       "        requires_grad=True),\n",
+       " tensor([0.1581], requires_grad=True))"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeffs.requires_grad_(), bias.requires_grad_()\n",
+    "coeffs, bias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc19928-9bd2-4dbf-b8a3-63ade47b42ad",
+   "metadata": {},
+   "source": [
+    "This results in a tensor with `requires_grad` set to `True`. After we calculate the loss, we use pytorch's inbuilt functionality to calculate the gradients for each parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8d150564-87b1-42db-82af-449e97382be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.7565, grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = calculate_loss(coeffs, bias, X, y)\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4c9289d8-e95b-4a82-92b7-2362eab41f71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3ade70e-c632-4a5b-90fb-c8b3779c38cc",
+   "metadata": {},
+   "source": [
+    "Now we can see the gradients per parameter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "33172f44-4591-4310-92f5-5f21eb73e15d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.1567, 0.6927, 0.5511, 0.4441, 0.3996, 0.4430, 0.0141, 0.5748, 0.1580,\n",
+       "         0.7024, 0.8117, 0.6109, 0.6501, 0.4746, 0.4841, 0.4478, 0.2880, 0.6078,\n",
+       "         0.3762, 0.1326, 0.2071, 0.3587, 0.5756, 0.4314, 0.6708, 0.6537, 0.6786,\n",
+       "         0.0834, 0.3879, 0.6260, 0.7039, 0.7055, 0.0961, 0.2853, 0.5433, 0.4367,\n",
+       "         0.4018, 0.6324, 0.0431, 0.7754, 0.5901, 0.3043, 0.4202, 0.1487, 0.6747,\n",
+       "         0.5915, 0.2390, 0.0950, 0.0766, 0.5454, 0.5733, 0.6641, 0.6969, 0.6295,\n",
+       "         0.3592, 0.6078]),\n",
+       " tensor([0.8963]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeffs.grad, bias.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62376a1f-15a4-45a6-8e85-17f921d05398",
+   "metadata": {},
+   "source": [
+    "When we called `requires_grad_` on the parameters, we signal to pytorch to record the operations that the parameters are involved in. When we call `backward` on the loss, pytorch calculates the partial derivative of each parameter, i.e. the derivative of the combined sequence of operations for each parameter given that all the others held constant.\n",
+    "\n",
+    "Let's repeat the steps:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "14016888-a470-4cb9-a03c-8a8d22d091fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.7565, grad_fn=<MeanBackward0>),\n",
+       " tensor([0.3133, 1.3855, 1.1021, 0.8882, 0.7992, 0.8859, 0.0281, 1.1496, 0.3159,\n",
+       "         1.4048, 1.6233, 1.2219, 1.3001, 0.9491, 0.9683, 0.8957, 0.5761, 1.2156,\n",
+       "         0.7524, 0.2652, 0.4141, 0.7174, 1.1512, 0.8629, 1.3416, 1.3074, 1.3571,\n",
+       "         0.1667, 0.7759, 1.2520, 1.4078, 1.4111, 0.1922, 0.5707, 1.0866, 0.8734,\n",
+       "         0.8035, 1.2648, 0.0862, 1.5508, 1.1802, 0.6086, 0.8405, 0.2974, 1.3494,\n",
+       "         1.1831, 0.4779, 0.1899, 0.1531, 1.0907, 1.1466, 1.3282, 1.3938, 1.2590,\n",
+       "         0.7183, 1.2156]),\n",
+       " tensor([1.7925]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = calculate_loss(coeffs, bias, X, y)\n",
+    "loss.backward()\n",
+    "loss, coeffs.grad, bias.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c62005b3-a32b-4fcc-84e0-81dae2cdc1b3",
+   "metadata": {},
+   "source": [
+    "We notice that the gradients have doubled. This is because pytorch repeated the same order of operations and calculated the gradients as we had earlier, but then added them the the earlier gradients. So we have to be careful each time we use the gradients to update the parameters, to zero them afterward so that we get a new set of gradients after the next iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f2c12bcb-3a96-45c1-a65f-d90cfa62b949",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " tensor([0.]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coeffs.grad.zero_(), bias.grad.zero_()\n",
+    "coeffs.grad, bias.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ca5772-e7d3-44fa-a956-845ea468b6b8",
+   "metadata": {},
+   "source": [
+    "We now run the iterations a few times. Notice the loss decreasing with every iteration:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "03df8d27-ebbc-42db-8f40-55a58de9976a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.7565, grad_fn=<MeanBackward0>)\n",
+      "tensor(0.6127, grad_fn=<MeanBackward0>)\n",
+      "tensor(0.4945, grad_fn=<MeanBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(3):\n",
+    "    loss = calculate_loss(coeffs, bias, X, y)\n",
+    "    print(loss)\n",
+    "    loss.backward()\n",
+    "    with torch.no_grad():\n",
+    "        # will not include the operations in this block\n",
+    "        # in calculating the next set of gradients\n",
+    "        coeffs.sub_(coeffs.grad * 0.01)\n",
+    "        bias.sub_(bias.grad * 0.01)\n",
+    "        coeffs.grad.zero_()\n",
+    "        bias.grad.zero_()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c607a50-f952-44af-8a1a-ba16eb80e1b0",
+   "metadata": {},
+   "source": [
+    "The goal is to minimize the error with each training cycle through the data, i.e. each epoch. This translates to moving the parameters in the direction opposite of the gradient at a point on the graph that can be plotted for the function that combines all the operations involved in calculating the loss.\n",
+    "\n",
+    "If the gradient is positive, meaning that the slope's direction on the graph at that point is upwards, we want to move backwards. If the gradient is negative, meaning that the direction is downwards, we want to move forward, because we want to find the minimum point in the graph. This is achieved by subtracting each gradient from its parameter.\n",
+    "\n",
+    "However, there's a risk that we might subtract too much and overshoot the minimum point. So we scale down the gradient by a factor before subtracting it from the parameter. This becomes our `learning_rate`."
    ]
   },
   {
