completed the training loop

--- a/notebooks/linear_model_nn_from_scratch.ipynb
+++ b/notebooks/linear_model_nn_from_scratch.ipynb
@@ -1702,7 +1702,7 @@
    "id": "c5560fae-0eeb-4b95-9b40-7eed0cdbad6b",
    "metadata": {},
    "source": [
-    "We can print the first 3 input rows and predictions as below:"
+    "We can print the first 3 input rows and predictions:"
    ]
   },
   {
@@ -1966,6 +1966,7 @@
    "id": "fd7732ab-8109-4bdf-9428-71143cf79f29",
    "metadata": {},
    "source": [
+    "### Loss function\n",
     "For the linear model to learn, it needs to evaluate its predictions at each step to see how far it is from the true predictions, and modify its parameters to give better predictions.\n",
     "\n",
     "One simple way to do this is to get the mean error across all the predictions by calculating the mean absolute error like below:"
@@ -1997,7 +1998,7 @@
    "id": "538c1f80-c76a-4970-911a-c95dd171b86b",
    "metadata": {},
    "source": [
-    "The mean absolute error will therefore be the loss function that will be used improve predictions.\n",
+    "The mean absolute error function will be the loss function used improve predictions.\n",
     "\n",
     "We add functions to calculate predictions and the loss as shown above. "
    ]
@@ -2040,6 +2041,8 @@
    "metadata": {},
    "source": [
     "It gives us the same MAE as seen previously.\n",
+    "\n",
+    "### Gradient descent\n",
     "\n",
     "Now that we have a means of getting predictions and evaluating them via the loss function, we now need a way of using the loss to alter the parameters (coefficients + bias) to improve the next set of predictions. We do this by getting the gradient of each parameter after calculating the loss. We need to intialize the parameters in a special way to achieve this."
    ]
@@ -2271,7 +2274,139 @@
     "\n",
     "If the gradient is positive, meaning that the slope's direction on the graph at that point is upwards, we want to move backwards. If the gradient is negative, meaning that the direction is downwards, we want to move forward, because we want to find the minimum point in the graph. This is achieved by subtracting each gradient from its parameter.\n",
     "\n",
-    "However, there's a risk that we might subtract too much and overshoot the minimum point. So we scale down the gradient by a factor before subtracting it from the parameter. This becomes our `learning_rate`."
+    "However, there's a risk that we might subtract too much and overshoot the minimum point. So we scale down the gradient by a factor before subtracting it from the parameter. This becomes our `learning_rate`, which is 0.01 in the example above.\n",
+    "\n",
+    "We create additional utility functions for the training process for some of the steps above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "5a68e28f-7c1f-465b-9710-13187ff7c571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_params(params, learning_rate):\n",
+    "    for param in params:\n",
+    "        param.sub_(param.grad * learning_rate)\n",
+    "        param.grad.zero_()\n",
+    "\n",
+    "def train_epoch(coeffs, bias, learning_rate):\n",
+    "    loss = calculate_loss(coeffs, bias, X_train, y_train)\n",
+    "    loss.backward()\n",
+    "    with torch.no_grad():\n",
+    "        update_params((coeffs, bias), learning_rate)\n",
+    "    print(f\"{loss:.3f}\", end=\"; \")\n",
+    "\n",
+    "def init_params():\n",
+    "    sizes = [n_coeff, 1]\n",
+    "    return [(torch.rand(size) - 0.5).requires_grad_() for size in sizes]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff6ed074-1085-4934-a519-8c1270c04c78",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d2047e4-d040-4215-bf56-f8b5558a51b4",
+   "metadata": {},
+   "source": [
+    "We now separate part of the training data to be used for validation of the model. The validation set is used to evaluate how the model performs on data not seen in training. We stratify the data split so that the overall ratio of 1s to 0s in the predicted class is retained within each split."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c832f77f-7bb8-4c9f-9028-5e3d3402d844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([493, 56]),\n",
+       " torch.Size([493]),\n",
+       " torch.Size([124, 56]),\n",
+       " torch.Size([124]))"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from fastai.data.transforms import TrainTestSplitter\n",
+    "splitter = TrainTestSplitter(test_size=0.2, stratify=y, random_state=42)\n",
+    "train_idx, val_idx = splitter(X)\n",
+    "\n",
+    "X_train, X_val = X[train_idx], X[val_idx]\n",
+    "y_train, y_val = y[train_idx], y[val_idx]\n",
+    "\n",
+    "X_train.shape, y_train.shape, X_val.shape, y_val.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c93979ee-519d-4a3d-903a-8f1401c06134",
+   "metadata": {},
+   "source": [
+    "We now train the model for a number of epochs through the training set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "cd74bd6d-fc95-4dcb-b2a2-056b0604f70a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(epochs=30, learning_rate=0.01):\n",
+    "    torch.manual_seed(42)\n",
+    "    coeffs, bias = init_params()\n",
+    "    for _ in range(epochs):\n",
+    "        train_epoch(coeffs, bias, learning_rate)\n",
+    "    return coeffs, bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a69c05b6-c34c-4733-a3ca-db37d3133edb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.760; 0.609; 0.486; 0.397; 0.348; 0.322; 0.310; 0.305; 0.303; 0.301; 0.300; 0.298; 0.297; 0.295; 0.294; 0.293; 0.292; 0.290; 0.289; 0.288; 0.287; 0.286; 0.285; 0.283; 0.282; 0.281; 0.280; 0.279; 0.278; 0.277; "
+     ]
+    }
+   ],
+   "source": [
+    "params = train_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba83aee6-7486-4660-966e-0fc761705991",
+   "metadata": {},
+   "source": [
+    "The loss goes down each time, showing that the model is becoming better and better at making predictions on the training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "718d11ea-609c-4277-8c93-42f7e5b5a989",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo: accuracy metric and submission"
    ]
   },
   {
